@@ -94,6 +94,7 @@ NULL
 #' @keywords datasets
 #' @examples
 #' \donttest{
+#' # This example is excluded from testing to reduce package check time
 #' # get data; the beta parameters used to simulate the data were
 #' # Phi: 2.197, p: -0.4064  Tau:-2,-1,3
 #' data(tagloss)
@@ -127,8 +128,6 @@ NULL
 #' # model.
 #' mod0=crm(dp,ddl,model.parameters=list(tau=list(formula=~I(tag1+tag2))),
 #'         initial=list(Phi=2,p=.3,tau=c(-2)),hessian=TRUE)
-#' }
-#' \dontrun{
 #' # now fit a model allowing different loss rates for each tag but still independent
 #' mod1=crm(dp,ddl,model.parameters=list(tau=list(formula=~tag1+tag2)),
 #'         initial=list(Phi=2,p=.3,tau=c(-2,-1)),hessian=TRUE)
