@@ -44,6 +44,7 @@ save(tagloss,file="tagloss.rda")
 }
 \examples{
 \donttest{
+# This example is excluded from testing to reduce package check time
 # get data; the beta parameters used to simulate the data were
 # Phi: 2.197, p: -0.4064  Tau:-2,-1,3
 data(tagloss)
@@ -77,8 +78,6 @@ ddl$p$fix[ddl$p$perm=="no"&ddl$p$tag1==1&ddl$p$tag2==1]=0
 # model.
 mod0=crm(dp,ddl,model.parameters=list(tau=list(formula=~I(tag1+tag2))),
         initial=list(Phi=2,p=.3,tau=c(-2)),hessian=TRUE)
-}
-\dontrun{
 # now fit a model allowing different loss rates for each tag but still independent
 mod1=crm(dp,ddl,model.parameters=list(tau=list(formula=~tag1+tag2)),
         initial=list(Phi=2,p=.3,tau=c(-2,-1)),hessian=TRUE)
